[gd_scene load_steps=3 format=3 uid="uid://f55gnr1xjrgw"]

[ext_resource type="Script" path="res://scenes/menus/create_player_menu.gd" id="1_x5xv5"]
[ext_resource type="AudioStream" uid="uid://da11n77gyim7d" path="res://Sounds/FUI Holographic Button Press-1.wav" id="2_qnmp5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5xv5")

[node name="Username" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 210.0
offset_right = 749.0
offset_bottom = 270.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Usuario"

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 499.0
offset_top = 286.0
offset_right = 749.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Contrasena"

[node name="CreatePlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 382.0
offset_right = 620.0
offset_bottom = 442.0
theme_override_font_sizes/font_size = 30
text = "Crear Usuario"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 381.0
offset_right = 912.0
offset_bottom = 441.0
theme_override_font_sizes/font_size = 30
text = "Regresar a Login"

[node name="btnPressedError" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qnmp5")
volume_db = 15.0

[connection signal="button_down" from="CreatePlayer" to="." method="_on_create_player_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
